examples/errors/stringalias.go
package errors

type StringAlias string

type TypeAlias struct {
	Value StringAlias
}
